<resources>
    <string name="app_name">Foo:D</string>
    <string name="search">검색</string>
    <string name="search_hint">제품명 또는 제조사 이름</string>
    <string name="home">홈</string>
    <string name="food_on">푿 ON</string>
    <string name="excess_advertisement">과대광고</string>
    <string name="my">MY</string>
    <string name="confirmed_food">인증 식품</string>
    <string name="stopped_food">회수 및 판매중지 식품</string>

    <string name="haccp">HACCP</string>
    <string name="confirmed">인증</string>
    <string name="haccp_full">HACCP 인증</string>

    <string name="child">어린이</string>
    <string name="child2">기호식품</string>
    <string name="child3">품질인증</string>
    <string name="child_full">어린이 기호식품 품질인증</string>

    <string name="harm_1">위해∙회수 1등급</string>
    <string name="harm_2">위해∙회수 2등급</string>
    <string name="harm_3">위해∙회수 3등급</string>

    <string name="harm_1_judgement">위해∙회수 1등급 판정</string>
    <string name="harm_2_judgement">위해∙회수 2등급 판정</string>
    <string name="harm_3_judgement">위해∙회수 3등급 판정</string>

    <string name="haccp_content_1">안전하고 깨끗한 제품을</string>
    <string name="haccp_content_2">공급하기 위한</string>
    <string name="haccp_content_3">식품안전관리인증기준</string>

    <string name="child_content_1">안전하고 영양을 고루 갖춘</string>
    <string name="child_content_2">어린이 기호식품</string>

    <string name="harm_content_1">인체건강에 미치는</string>

    <string name="harm_1_content">위해 영향이 매우 큰 식품</string>
    <string name="harm_2_content">위해 영향이 일시적인 식품</string>
    <string name="harm_3_content"> 위해 영향이 비교적 적은 식품</string>

    <string name="category">카테고리</string>
    <string name="processed_food">가공식품</string>
    <string name="agricultural_products">농산물</string>
    <string name="livestock_products">축산물</string>
    <string name="health_functional_food">건강기능식품</string>
    <string name="etc">기타</string>

    <string name="card_list_title">제품명</string>
    <string name="card_list_company">회사명</string>
    <string name="card_list_date">2020.09.14</string>
    <string name="card_list_lank_1">회수 1등급</string>
    <string name="card_list_lank_2">회수 2등급</string>
    <string name="card_list_lank_3">회수 3등급</string>

    <string name="tab_item_0">전체</string>
    <string name="tab_item_1">음료∙차∙주류</string>
    <string name="tab_item_2">과자∙빵류∙아이스크림</string>
    <string name="tab_item_3">유제품∙축산물</string>
    <string name="tab_item_4">가공식품</string>
    <string name="tab_item_5">농수산물</string>
    <string name="tab_item_6">소스∙장류</string>
    <string name="tab_item_7">건강기능식품</string>
    <string name="tab_item_8">식용유지류</string>
    <string name="tab_item_9">기타</string>

    <string name="eng_tab_item_0">ALL</string>
    <string name="eng_tab_item_1">Drinks</string>
    <string name="eng_tab_item_2">Snacks</string>
    <string name="eng_tab_item_3">Dairy Livestock Products</string>
    <string name="eng_tab_item_4">Processed Food</string>
    <string name="eng_tab_item_5">Agricultural Marin Products</string>
    <string name="eng_tab_item_6">Sauce</string>
    <string name="eng_tab_item_7">Health Functional Food</string>
    <string name="eng_tab_item_8">Oils</string>
    <string name="eng_tab_item_9">etc.</string>


    <string name="explain_1">식품의약품안전처에서 </string>
    <string name="explain_haccp">HACCP 인증</string>
    <string name="explain_child">어린이 기호식품 품질인증</string>
    <string name="explain_2">을 받은 제품입니다</string>

    <string name="explain_deceptive_title">식품 허위∙과대광고 정보</string>
    <string name="explain_deceptive_content_1">식품의약품안전처에서 과대광고 적발된 식품</string>
    <string name="explain_deceptive_content_2">위반 사항에 따라</string>
    <string name="explain_deceptive_content_3">처분을 받을 수 있음</string>
    <string name="deceptive_low">시정명령</string>
    <string name="deceptive_high">영업정지</string>
    <string name="deceptive">허위∙과대광고</string>
    <string name="or">또는</string>

    <string name="detail_child_1">업소명</string>
    <string name="detail_child_2">인허가번호</string>
    <string name="detail_child_3">제품용량</string>
    <string name="detail_child_4">인증번호</string>
    <string name="detail_child_5">제품형태</string>
    <string name="detail_child_6">인증일자</string>
    <string name="detail_child_7">식품유형</string>
    <string name="detail_child_8">만료일자</string>

    <string name="detail_haccp_1">영양성분</string>
    <string name="detail_haccp_2">원재료</string>
    <string name="detail_haccp_3">바코드</string>
    <string name="detail_haccp_4">축산/식품구분</string>
    <string name="detail_haccp_5">판매원</string>
    <string name="detail_haccp_6">유형의상태</string>
    <string name="detail_haccp_7">출력번호</string>
    <string name="detail_haccp_8">제조원</string>
    <string name="detail_haccp_9">유형명</string>
    <string name="detail_haccp_10">용량</string>
    <string name="detail_haccp_11">품목보고번호</string>
    <string name="detail_haccp_12">알레르기유발물질</string>

    <string name="detail_harm_1">품목코드</string>
    <string name="detail_harm_2">포장단위</string>
    <string name="detail_harm_3">제조업체명</string>
    <string name="detail_harm_4">유통기한</string>
    <string name="detail_harm_5">회수방법</string>
    <string name="detail_harm_6">바코드번호</string>
    <string name="detail_harm_7">회수.판매중지 일련번호</string>
    <string name="detail_harm_8">등록일</string>
    <string name="detail_harm_9">품목제조보고번호</string>
    <string name="detail_harm_10">제조일자</string>
    <string name="detail_harm_11">품목유형(품목코드명)</string>
    <string name="detail_harm_12">회수사유</string>
    <string name="detail_harm_13">전화번호</string>
    <string name="detail_harm_14">업체주소</string>
    <string name="detail_harm_15">식품분류</string>

    <string name="detail_deceptive_1">업체명</string>
    <string name="detail_deceptive_2">우편번호주소</string>
    <string name="detail_deceptive_3">광고(적발)내용</string>
    <string name="detail_deceptive_4">행정처분일자</string>
    <string name="detail_deceptive_5">처분명</string>
    <string name="detail_deceptive_6">위반법령</string>
    <string name="detail_deceptive_7">증거파일</string>

    <string name="tab_my_page_1">HACCP인증</string>
    <string name="tab_my_page_2">어린이품질인증</string>
    <string name="tab_my_page_3">회수∙판매중지 식품</string>
    <string name="tab_my_page_4">과대광고 적발 식품</string>

    <string name="stored">저장한 상품</string>
    <string name="label_good">인증</string>
    <string name="label_bad">위해</string>

    <string name="alternative">대체상품 추천</string>
    <string name="recommended_keyword">추천 키워드</string>


</resources>