<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/explain"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/colorDeceptivePurple"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/explain_deceptive_title"
                android:text="@string/explain_deceptive_title"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/explain_deceptive_content_1"
                android:text="@string/explain_deceptive_content_1"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explain_deceptive_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/explain_deceptive_content_2"
                android:text="@string/explain_deceptive_content_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explain_deceptive_content_1" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deceptive_low"
                android:text="@string/deceptive_low"
                android:textColor="@color/colorOrange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/explain_deceptive_content_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/or"
                android:text="@string/or"
                android:layout_marginLeft="3dp"
                app:layout_constraintStart_toEndOf="@+id/deceptive_low"
                app:layout_constraintTop_toBottomOf="@id/explain_deceptive_content_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deceptive_high"
                android:id="@+id/deceptive_high"
                android:textColor="@color/colorRedPink"
                android:layout_marginLeft="3dp"
                app:layout_constraintTop_toBottomOf="@id/explain_deceptive_content_2"
                app:layout_constraintStart_toEndOf="@+id/or"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explain_deceptive_content_3"
                android:id="@+id/explain_deceptive_content_3"
                android:layout_marginLeft="3dp"
                app:layout_constraintStart_toEndOf="@+id/deceptive_high"
                app:layout_constraintTop_toBottomOf="@id/explain_deceptive_content_2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>