<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/category_toolbar"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/processed_food"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallLabel_good_food"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/confirmed_food"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_good"
        app:layout_constraintTop_toBottomOf="@id/category_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_good"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/smallLabel_bad_food"
        app:layout_constraintTop_toBottomOf="@+id/smallLabel_good_food"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/haccp_menu"
            android:layout_weight="1"
            android:elevation="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/colorHaccpBlue"
            android:background="@drawable/border_round_rectangle"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/haccp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haccp_menu_1"
                android:text="@string/haccp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haccp_menu_2"
                android:text="@string/confirmed"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                app:layout_constraintTop_toBottomOf="@+id/haccp_menu_1"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haccp_content_1"
                android:text="@string/haccp_content_1"
                android:textSize="11sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/haccp_menu_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/haccp_content_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haccp_content_2"
                android:text="@string/haccp_content_2"
                android:textSize="11sp"
                android:layout_marginLeft="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/haccp_content_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/haccp_content_3"
                android:text="@string/haccp_content_3"
                android:textSize="11sp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/child_menu"
            android:layout_weight="1"
            android:elevation="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="3dp"
            android:backgroundTint="@color/colorChildBlue"
            android:background="@drawable/border_round_rectangle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/child"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/child_menu_1"
                android:text="@string/child"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/child_menu_2"
                android:text="@string/child2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                app:layout_constraintTop_toBottomOf="@+id/child_menu_1"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/child_menu_3"
                android:text="@string/child3"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginRight="15dp"
                app:layout_constraintTop_toBottomOf="@+id/child_menu_2"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/child_content_1"
                android:text="@string/child_content_1"
                android:textSize="11sp"
                android:layout_marginLeft="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/child_content_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/child_content_2"
                android:text="@string/child_content_2"
                android:textSize="11sp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallLabel_bad_food"
        android:text="@string/stopped_food"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/linear_good"
        app:layout_constraintBottom_toTopOf="@id/linear_bad"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_bad"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallLabel_bad_food"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/harm_1_menu"
            android:layout_marginBottom="5dp"
            android:elevation="0dp"
            android:backgroundTint="@color/colorFirstPink"
            android:background="@drawable/border_round_rectangle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/harm1"
                android:layout_marginLeft="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_1"
                android:text="@string/harm_1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_1_content_1"
                android:text="@string/harm_content_1"
                android:textSize="11sp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/harm_1_content_2"
                app:layout_constraintTop_toBottomOf="@+id/harm_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_1_content_2"
                android:text="@string/harm_1_content"
                android:textSize="11sp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/harm_2_menu"
            android:layout_marginBottom="5dp"
            android:elevation="0dp"
            android:backgroundTint="@color/colorSecondPink"
            android:background="@drawable/border_round_rectangle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/harm2"
                android:layout_marginLeft="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/harm_2"
                android:text="@string/harm_2"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_2_content_1"
                android:text="@string/harm_content_1"
                android:textSize="11sp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/harm_2_content_2"
                app:layout_constraintTop_toBottomOf="@+id/harm_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_2_content_2"
                android:text="@string/harm_2_content"
                android:textSize="11sp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/harm_3_menu"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorThirdPink"
            android:background="@drawable/border_round_rectangle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/harm3"
                android:layout_marginLeft="15dp"
                android:elevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/harm_3"
                android:text="@string/harm_3"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_3_content_1"
                android:text="@string/harm_content_1"
                android:textSize="11sp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/harm_3_content_2"
                app:layout_constraintTop_toBottomOf="@+id/harm_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/harm_3_content_2"
                android:text="@string/harm_3_content"
                android:textSize="11sp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>